processed/gerrit/txt_full/55416.txt
Change:     55416
Subject:    LU-17948 llite: replace i_mtime.tv_sec with inode_get_mtime_sec()
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55416
Change-Id:  Iaed264c32be3d48039c5350ebd306f4fc3ef5eb9
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-06-12 23:46:44.000000000
Updated:    2024-06-25 03:33:12.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   2 (0 unresolved)
Topic:      ubuntu2404

--- Labels ---
  Code-Review: Qian Yingjin: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Jian Yu, Qian Yingjin

--- Commit Message ---
LU-17948 llite: replace i_mtime.tv_sec with inode_get_mtime_sec()

This patch replaces i_mtime.tv_sec with inode_get_mtime_sec() to
fix the following build failure:

lustre/llite/pcc.c:1691:32: error:
'struct inode' has no member named 'i_mtime'; did you mean '__i_mtime'?
 1691 |         item.pm_mtime = inode->i_mtime.tv_sec;
      |                                ^~~~~~~
      |                                __i_mtime

Test-Parameters: trivial testlist=sanity-pcc

Change-Id: Iaed264c32be3d48039c5350ebd306f4fc3ef5eb9
Fixes: 3835f4d ("LU-13881 pcc: comparator support for PCC rules")
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55416
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Qian Yingjin <qian@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-06-12 23:46:44.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-06-12 23:48:21.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2024-06-12 23:50:21.000000000) ---
Patch Set 1:

(1 comment)

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/43372/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs

--- Message (Andreas Dilger, 2024-06-12 23:59:13.000000000) ---
Patch Set 1: Code-Review+1

(1 comment)

The spelling.txt rule is just a nice-to-have if the patch needs to be refreshed, otherwise it is fairly important that this patch land quickly.

--- Message (Lustre Gerrit Janitor, 2024-06-13 00:09:33.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43372/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2024-06-13 00:20:55.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105441/ : SUCCESS

--- Message (Maloo, 2024-06-13 00:22:14.000000000) ---
Patch Set 1:

The following sessions will be run for build 105441 patch 1

Enforced:
- review-ldiskfs-dne on el9.3-x86_64/ldiskfs servers and clients
- custom on el9.3-x86_64/ldiskfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=105441&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=105441#redirect

--- Message (Lustre Gerrit Janitor, 2024-06-13 03:07:12.000000000) ---
Patch Set 1:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed with errors!

> conf-sanity3@ldiskfs+DNE Timeout(7009s)

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43372/results.html

--- Message (Maloo, 2024-06-13 06:40:41.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs-dne on RHEL 9.3/x86_64 uploaded by Trevis Autotest from trevis-57vm1: https://testing.whamcloud.com/test_sessions/2098395b-6239-4523-a31b-8c2a9c399b7b ran 5 tests.

--- Message (Jian Yu, 2024-06-13 18:20:59.000000000) ---
Topic set to ubuntu2404

--- Message (Qian Yingjin, 2024-06-14 01:18:07.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2024-06-25 03:33:09.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2024-06-25 03:33:12.000000000) ---
Change has been successfully cherry-picked as 37486afa73573be6b4ce363038a9ce27d36101ee by Oleg Drokin
